# Skymarket

./: .gitignore  README.md  main.py  pyproject.toml
data/: products.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_Category_py.html  z_145eef247bfb46b6_Product_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_print_mixin_py.html  z_145eef247bfb46b6_utils_py.html
src/: Category.py  Product.py  print_mixin.py  utils.py
tests/: conftest.py  test_classes.py  test_print_mixin.py  test_utils.py
